cmake_minimum_required(VERSION 3.25)

include(set_compiler_options)

add_executable(0238_product_of_array_except_self_tests
    0238_product_of_array_except_self.hpp
    0238_product_of_array_except_self_tests.cpp
)

target_link_libraries(0238_product_of_array_except_self_tests PUBLIC gtest_main)
set_generic_compiler_options(0238_product_of_array_except_self_tests PUBLIC)

enable_testing()
include(GoogleTest)
gtest_discover_tests(0238_product_of_array_except_self_tests)
