cmake_minimum_required(VERSION 3.25)

include(set_compiler_options)

add_executable(0953_verifying_an_alien_dictionary_tests
    0953_verifying_an_alien_dictionary.hpp
    0953_verifying_an_alien_dictionary_tests.cpp
)

target_link_libraries(0953_verifying_an_alien_dictionary_tests PUBLIC gtest_main)
set_generic_compiler_options(0953_verifying_an_alien_dictionary_tests PUBLIC)

enable_testing()
include(GoogleTest)
gtest_discover_tests(0953_verifying_an_alien_dictionary_tests)
